# projects

./: .cpanel.yml  .gitignore  index.html
PAE/: .env.development  .env.example  .gitignore  .pre-commit-config.yaml  PAE thesis update.md  PAE_Opus_Synthesis v2.md  PAE_Opus_Synthesis.md  README.md  STARTUP.md  diagnose_kalshi_filters.py  diagnose_price_chain.py  kalshi_microgains_prompt Opus Revised.md  local config - Shortcut.lnk  pending-bugfix.md  proposed_changes.md  pyproject.toml  pytest.ini  requirements.txt  start-all.sh  start-bot.ps1  start-bot.sh  start-detect.ps1  start-workers.sh  start.sh
PAE/app/: cli.py
PAE/app/core/: config.py  database.py  strategy_loader.py
PAE/app/models/: __init__.py  article.py  kalshi_category.py  opportunity.py  position.py  signal.py  strategy.py  trade.py  worker_control.py
PAE/app/utils/: dedup.py  url_normalizer.py
PAE/app/workers/: bot_listener.py  health.py  scheduler.py  tasks.py
PAE/deploy/: com.pae.workers.plist  pae-workers.service
PAE/docs/: ADDING_STRATEGIES.md  ARCHITECTURE.md  DEPLOYMENT.md  kalshi-micro-gains-strategy.md
PAE/scripts/: migrate_add_kalshi.py  migrate_add_kalshi_categories.py  migrate_fix_decimals.py  pull.sh  run_telegram_bot.py  run_workers.py
PAE/strategies/: __init__.py
PAE/strategies/propaganda-arbitrage/: llm_config.py  (+3 more)
PAE/tests/: test_article_processor.py  test_dedup.py  test_llm_synthesizer.py  test_pattern_analyzer.py  test_pattern_detector.py  test_rss_scraper.py  test_strategy_loader.py  test_telegram.py  test_trading.py  test_url_normalizer.py
PAE/web/: index.php
(+76 files in other folders)
